--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1501,6 +1501,8 @@ section.general-th {
   }
   .lsc-text {
     font-size: 72px;
+    color:#fece0b;
+    text-shadow: 0 4px 3px rgba(50, 75, 102, .15);
     span {
       color: #fff;
     }
