add button oll step

--- a/css/main.css
+++ b/css/main.css
@@ -438,6 +438,12 @@ th {
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'roboto_condensedbold';
+  src: url("../fonts/robotocondensed-bold-webfont.woff2") format("woff2"), url("../fonts/robotocondensed-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
 /*!
  * fullPage 2.9.4
  * https://github.com/alvarotrigo/fullPage.js
@@ -859,6 +865,9 @@ body {
   .bottom-background img {
     width: 100%; }
 
+.ttu {
+  text-transform: uppercase; }
+
 .head-backgraund {
   background: #46c8e9;
   overflow: hidden; }
@@ -1212,6 +1221,9 @@ body {
     @media (max-width: 768px) {
       .s1b-sect p {
         font-size: 20px; } }
+  @media (max-width: 480px) {
+    .s1b-sect {
+      width: 100%; } }
 
 .btn-orange {
   display: inline-block;
@@ -1223,7 +1235,8 @@ body {
   padding: 10px 20px;
   font-size: 18px;
   margin-bottom: 30px;
-  font-family: 'cubanoregular';
+  border: 0;
+  font-family: 'roboto_condensedbold';
   text-transform: uppercase; }
   @media (max-width: 1400px) {
     .btn-orange {
@@ -1246,12 +1259,15 @@ body {
     position: absolute;
     left: -6px;
     top: 3px;
-    bottom: -4px;
+    bottom: -3px;
     width: 6px;
     -webkit-transform: skewX(0deg) skewY(-45deg);
         -ms-transform: skewX(0deg) skewY(-45deg);
             transform: skewX(0deg) skewY(-45deg);
     background: #d56d16; }
+
+.crm-webform-button-container {
+  background: #f00 !important; }
 
 .arrow-down {
   text-align: center;
@@ -1345,6 +1361,9 @@ body {
     top: 8%;
     left: 22%;
     z-index: 5; }
+    @media (max-width: 768px) {
+      .general-second .cloud-l3 {
+        display: none; } }
   .general-second .cloud-r3 {
     position: absolute;
     top: 25%;
@@ -1748,20 +1767,25 @@ section.general-th .bottom-background:after {
 
 .s2texth {
   text-align: left; }
-  .s2texth p {
-    text-transform: uppercase; }
   .s2texth h2 {
     color: #fece0b;
     font-size: 48px; }
     @media (max-width: 768px) {
       .s2texth h2 {
         font-size: 36px; } }
+  .s2texth ul {
+    margin-bottom: 15px; }
   .s2texth li {
     position: relative;
     padding-left: 20px; }
     @media (max-width: 480px) {
       .s2texth li {
         padding-left: 5px; } }
+  .s2texth .btn-orange {
+    margin-left: 25px; }
+    @media (max-width: 1024px) {
+      .s2texth .btn-orange {
+        font-size: 16px; } }
 
 .s3-headsection {
   top: auto;
