--- a/scss/main.scss
+++ b/scss/main.scss
@@ -78,7 +78,9 @@ body {
     width: 100%;
   }
 }
-
+.ttu {
+  text-transform: uppercase;
+}
 .head-backgraund {
   background: #46c8e9;
   overflow: hidden;
@@ -457,6 +459,9 @@ body {
       font-size: 20px;
     }
   }
+  @include media ('<=phone') {
+      width: 100%;
+    }
 }
 .btn-orange {
   display: inline-block;
@@ -468,7 +473,8 @@ body {
   padding: 10px 20px;
   font-size: 18px;
   margin-bottom: 30px;
-  font-family: 'cubanoregular';
+  border:0;
+  font-family: 'roboto_condensedbold';
   text-transform: uppercase;
   @include media ('<=fullscreen') {
       margin-bottom: 20px;
@@ -492,11 +498,14 @@ body {
     position: absolute;
     left: -6px;
     top: 3px;
-    bottom: -4px;
+    bottom: -3px;
     width: 6px;
     transform: skewX(0deg) skewY(-45deg);
     background: #d56d16;
   }
+}
+.crm-webform-button-container {
+  background: #f00 !important;
 }
 .arrow-down {
   text-align: center;
@@ -599,6 +608,9 @@ body {
     top: 8%;
     left: 22%;
     z-index: 5;
+     @include media ('<=tablet') {
+      display: none;
+    }
   }
   .cloud-r3 {
     position: absolute;
@@ -1028,9 +1040,6 @@ section.general-th {
 }
 .s2texth {
   text-align: left;
-  p {
-    text-transform: uppercase;
-  }
   h2 {
     color: #fece0b;
     font-size: 48px;
@@ -1041,12 +1050,19 @@ section.general-th {
 
   ul {
     @extend %listreset;
+    margin-bottom: 15px;
   }
   li {
     position: relative;
     padding-left: 20px;
     @include media ('<=phone') {
       padding-left: 5px;
+    }
+  }
+  .btn-orange {
+    margin-left: 25px;
+    @include media ('<=desktop') {
+      font-size: 16px;
     }
   }
 }
