--- a/css/main.css
+++ b/css/main.css
@@ -1640,7 +1640,8 @@ body {
 
 .ltext {
   font-weight: normal;
-  font-size: 0.8em; }
+  font-size: 0.8em;
+  display: block !important; }
 
 @media (max-width: 1024px) {
   section.general-th {
